Fixed header and footer overflow

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -60,7 +60,6 @@
     .site-copyright {
       display: block;
       padding: 5px 10px;
-      width: 100%;
     }
 
     @media (min-width: 600px) {
