--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -13,8 +13,8 @@
     .site-title,
     .site-subtitle {
       display: block;
-      padding: 0 0.875rem;
-      width: 100%;
+      padding-left: 0.875rem;
+
     }
     .site-title {
       font-size: $title-font-size;
